--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ main {
   margin-bottom: 5vh;
 }
 
+/* Navigation */
+
 .ContainerNav {
   background-color: rgb(0, 0, 0, 90%);
   display: flex;
@@ -24,7 +26,7 @@ main {
   height: 100%;
 }
 
-.ContainerNav div {
+.ContainerNav div:not(.burgerMenuPhone a div) {
   background-color: var(--first-color);
   height: 100%;
   display: flex;
@@ -38,7 +40,7 @@ main {
 }
 
 nav {
-  padding-right: 8%;
+  padding-right: 10%;
   width: 30%;
 }
 
@@ -49,22 +51,127 @@ nav ul {
   justify-content: space-between;
 }
 
-li > a {
-  color: var(--third-color);
-  font-family: var(--First-font);
-  padding: 10%;
+nav ul li {
+  padding-right: 5%;
 }
 
-li > a:hover {
+li > a:not(.burgerMenuPhone a) {
+  color: var(--third-color);
+  font-family: var(--First-font);
+  padding: 8%;
+}
+
+li > a:hover:not(.burgerMenuPhone a) {
   background-color: var(--third-color);
   color: var(--first-color);
   border-radius: 20px;
 }
 
+.burgerMenuPhone {
+  display: none;
+}
+
+@media (max-width: 1130px) {
+  .BugerMenuD {
+    display: none !important;
+  }
+
+  /* Burger phone */
+  .burgerMenuPhone {
+    display: block;
+    height: fit-content;
+  }
+
+
+
+ 
+  .burgerMenuPhone a div {
+    height: 2px;
+    margin-top: 4px;
+    background-color: var(--third-color);
+  }
+
+  
+
+  .burgerMenuPhone a{
+    height: 1px !important;
+  }
+
+  .BarOneMenuPhone{
+    width: 16px;
+  }
+
+  .BarTwoMenuPhone{
+    width: 10px;
+  }
+
+  .BarThreeMenuPhone{
+    width: 5px;
+  }
+  .ContainerBugerMenu {
+    height: 100%;
+    width: 10%;
+  }
+
+  nav ul {
+    justify-content: end;
+  }
+}
+
+/* Première page */
+
 .FirstPage {
   display: grid;
   grid-template-columns: 40% 20% 30%;
   font-family: var(--First-font);
+  height: 90vh;
+}
+
+@media (max-width: 768px) {
+  .FirstPage {
+    grid-template-columns: none;
+    grid-template-rows: 40% 30% 30%;
+  }
+
+  .ThirdContainerFirstPage {
+    grid-row-start: 2;
+    text-align: center;
+  }
+
+  .FirstPage img {
+    width: 0%;
+    height: 90%;
+  }
+
+  .FirstContainerImgFirstPage,
+  .SecondContainerImgFirstPage {
+    padding-left: 0 !important;
+    padding-top: 0 !important;
+  }
+  .SecondContainerImgFirstPage {
+    height: 45vh;
+    width: 100%;
+    /* padding-left: 50vw; */
+  }
+  .hiddenTitle {
+    display: none;
+  }
+
+  .ContainerBV {
+    margin-top: 2vh;
+  }
+
+  .ContainerArticles {
+    height: 65vh;
+  }
+  .ComponentArticle {
+    height: 65vh;
+  }
+
+  nav {
+    padding-right: 15%;
+    width: 30%;
+  }
 }
 
 .FirstPage img {
@@ -153,6 +260,10 @@ p {
   animation: infinity 15s infinite;
 }
 
+.hiddenTitle {
+  color: var(--third-color);
+}
+
 @keyframes infinity {
   0% {
     transform: translateX(100%);
@@ -190,9 +301,9 @@ p {
 .ContainerArticles {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   color: var(--third-color);
   font-family: var(--First-font);
+  white-space: nowrap;
 }
 
 /* Prize name and more */
@@ -278,10 +389,9 @@ p {
   color: var(--first-color);
 }
 
-
 /* Footer */
 
-footer{
+footer {
   color: var(--third-color);
   height: 50vh;
   width: 94%;
@@ -292,15 +402,45 @@ footer{
   grid-template-columns: 30% 1% 69%;
 }
 
-.FooterSeparation{
+footer a {
+  color: var(--third-color);
+  font-family: var(--First-font);
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer a:not(.TitleCa) {
+  font-size: 20px;
+}
+
+.FooterSeparation {
   height: 90%;
   transform: translateY(5%);
   width: 0.1%;
   border: 1px solid var(--third-color);
 }
 
-.FooterArticles{
+/* Right Part */
+
+.FooterArticles {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
+  align-items: center;
+  margin-left: 5%;
+}
+
+.FooterArticles div div {
+  margin-top: 5%;
+}
+
+.FooterArticles h2 {
+  margin-bottom: 20%;
+}
+
+.FooterContact {
+  display: grid;
   text-align: center;
+  align-content: center;
 }
