--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ li > a:hover:not(.burgerMenuPhone a) {
   nav ul {
     justify-content: end;
   }
+
+  footer {
+    flex-direction: column;
+  }
 }
 
 /* Première page */
@@ -171,6 +175,9 @@ li > a:hover:not(.burgerMenuPhone a) {
   nav {
     padding-right: 15%;
     width: 30%;
+  }
+  footer {
+    display: none;
   }
 }
 
@@ -398,8 +405,7 @@ footer {
   margin-left: 3%;
   border-radius: 20px;
   background-color: var(--first-color);
-  display: grid;
-  grid-template-columns: 30% 1% 69%;
+  display: flex;
 }
 
 footer a {
