--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 main {
-  height: 4vh;
-  margin-bottom: 5vh;
+  height: 6vh;
+  padding-bottom: 1%;
 }
 
 /* Navigation */
@@ -21,7 +21,6 @@ main {
   justify-content: space-between;
   align-items: center;
   margin: 0.2% 1%;
-  padding: 1% 0% 1% 1%;
   border-radius: 20px;
   height: 100%;
 }
@@ -31,7 +30,7 @@ main {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0% 2%;
+  padding: 0 2%;
   border-radius: 15px;
 }
 
@@ -71,56 +70,7 @@ li > a:hover:not(.burgerMenuPhone a) {
   display: none;
 }
 
-@media (max-width: 1130px) {
-  .BugerMenuD {
-    display: none !important;
-  }
 
-  /* Burger phone */
-  .burgerMenuPhone {
-    display: block;
-    height: fit-content;
-  }
-
-
-
- 
-  .burgerMenuPhone a div {
-    height: 2px;
-    margin-top: 4px;
-    background-color: var(--third-color);
-  }
-
-  
-
-  .burgerMenuPhone a{
-    height: 1px !important;
-  }
-
-  .BarOneMenuPhone{
-    width: 16px;
-  }
-
-  .BarTwoMenuPhone{
-    width: 10px;
-  }
-
-  .BarThreeMenuPhone{
-    width: 5px;
-  }
-  .ContainerBugerMenu {
-    height: 100%;
-    width: 10%;
-  }
-
-  nav ul {
-    justify-content: end;
-  }
-
-  footer {
-    flex-direction: column;
-  }
-}
 
 /* Première page */
 
@@ -128,58 +78,10 @@ li > a:hover:not(.burgerMenuPhone a) {
   display: grid;
   grid-template-columns: 40% 20% 30%;
   font-family: var(--First-font);
-  height: 90vh;
+  height: 100vh;
 }
 
-@media (max-width: 768px) {
-  .FirstPage {
-    grid-template-columns: none;
-    grid-template-rows: 40% 30% 30%;
-  }
 
-  .ThirdContainerFirstPage {
-    grid-row-start: 2;
-    text-align: center;
-  }
-
-  .FirstPage img {
-    width: 0%;
-    height: 90%;
-  }
-
-  .FirstContainerImgFirstPage,
-  .SecondContainerImgFirstPage {
-    padding-left: 0 !important;
-    padding-top: 0 !important;
-  }
-  .SecondContainerImgFirstPage {
-    height: 45vh;
-    width: 100%;
-    /* padding-left: 50vw; */
-  }
-  .hiddenTitle {
-    display: none;
-  }
-
-  .ContainerBV {
-    margin-top: 2vh;
-  }
-
-  .ContainerArticles {
-    height: 65vh;
-  }
-  .ComponentArticle {
-    height: 65vh;
-  }
-
-  nav {
-    padding-right: 15%;
-    width: 30%;
-  }
-  footer {
-    display: none;
-  }
-}
 
 .FirstPage img {
   object-fit: cover;
@@ -188,12 +90,14 @@ li > a:hover:not(.burgerMenuPhone a) {
   border-radius: 20px;
 }
 
-.FirstContainerImgFirstPage {
-  width: 70%;
-  padding-left: 25%;
-  padding-top: 20%;
+.FirstContainerImgFirstPage{
+  padding-left: 20%;
 }
-
+.FirstContainerImgFirstPage img{
+  height: 70%;
+  width: 95%;
+  transform: translateY(35%);
+}
 .SecondContainerImgFirstPage {
   width: 90%;
   height: 80%;
@@ -219,8 +123,7 @@ p {
 }
 
 h1 {
-  margin: 0;
-  margin-bottom: 3%;
+  margin: 0 0 3%;
   font-size: 4rem;
 }
 
@@ -301,7 +204,7 @@ p {
 .ComponentArticle img {
   width: 100%;
   height: 45vh;
-  border-radius: 20px 20px 0px 0px;
+  border-radius: 20px 20px 0 0;
   object-fit: cover;
 }
 
@@ -375,7 +278,7 @@ p {
 .ComponentArticleT img {
   width: 100%;
   height: 45vh;
-  border-radius: 20px 20px 0px 0px;
+  border-radius: 20px 20px 0 0;
   object-fit: cover;
 }
 
@@ -406,6 +309,7 @@ footer {
   border-radius: 20px;
   background-color: var(--first-color);
   display: flex;
+  justify-content: space-around;
 }
 
 footer a {
@@ -431,10 +335,13 @@ footer a:not(.TitleCa) {
 /* Right Part */
 
 .FooterArticles {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  display: flex;
   align-items: center;
   margin-left: 5%;
+}
+
+.FooterArticles div {
+  padding-right: 2%;
 }
 
 .FooterArticles div div {
@@ -449,4 +356,130 @@ footer a:not(.TitleCa) {
   display: grid;
   text-align: center;
   align-content: center;
+}
+
+/* Media Query */
+
+@media (max-width: 768px) {
+  .FirstPage {
+    grid-template-columns: none;
+    grid-template-rows: 40% 20% 40%;
+    padding-bottom: 5%;
+  }
+
+  .FirstPage img{
+    height: 100%;
+  }
+
+  .ThirdContainerFirstPage {
+    grid-row-start: 2;
+    text-align: center;
+  }
+  .FirstContainerImgFirstPage{
+    width: 100%;
+  }
+
+  .FirstContainerImgFirstPage img{
+    width: 40%;
+    margin-left: 3%;
+    transform: translateY(0);
+  }
+
+  .SecondContainerImgFirstPage img{
+    width: 40%;
+    margin-right: 3%;
+  }
+
+  .FirstContainerImgFirstPage,
+  .SecondContainerImgFirstPage {
+    padding-left: 0;
+    padding-top: 0 ;
+
+  }
+  .SecondContainerImgFirstPage {
+    height: 100%;
+    width: 100%;
+    text-align: right;
+    /* padding-left: 50vw; */
+  }
+  .hiddenTitle {
+    display: none;
+  }
+
+  .ContainerBV {
+    margin-top: 2vh;
+  }
+
+  .ContainerArticles {
+    height: 65vh;
+  }
+  .ComponentArticle {
+    height: 65vh;
+  }
+
+  nav {
+    padding-right: 15%;
+    width: 30%;
+  }
+
+  .FooterArticles{
+    flex-direction: column;
+  }
+
+  footer {
+    height: 100vh;
+  }
+
+}
+
+@media (max-width: 1130px) {
+  .BugerMenuD {
+    display: none;
+  }
+  h1{
+    font-size: 3rem;
+  }
+  /* Burger phone */
+  .burgerMenuPhone {
+    display: block;
+    height: fit-content;
+  }
+
+
+  .burgerMenuPhone a div {
+    height: 2px;
+    margin-top: 4px;
+    background-color: var(--third-color);
+  }
+
+
+
+  .burgerMenuPhone a{
+    height: 1px;
+  }
+
+  .BarOneMenuPhone{
+    width: 16px;
+  }
+
+  .BarTwoMenuPhone{
+    width: 10px;
+  }
+
+  .BarThreeMenuPhone{
+    width: 5px;
+  }
+  .ContainerBugerMenu {
+    height: 100%;
+    width: 10%;
+  }
+
+  nav ul {
+    justify-content: end;
+  }
+
+  footer {
+    flex-direction: column;
+    height: auto;
+  }
 }
