--- a/article1.css
+++ b/article1.css
@@ -5,6 +5,7 @@ body{
     --yellow-color: #fecb01;
     --third-color: white;
     --First-font: "Roboto", sans-serif;
+    font-family: var(--First-font);
 }
 
 main {
@@ -82,7 +83,63 @@ p {
     font-family: var(--First-font);
 }
 
-h3, h1 {
+h3 {
     padding: 0;
     color: var(--third-color);
 }
+
+/* articles */
+
+section{
+    display: flex;
+    align-items: center;
+    height: 90vh;
+    padding: 0 5%;
+    gap: 1%;
+}
+
+
+
+.ContainerSmallImg{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    bottom: 18%;
+}
+
+
+
+.ContainerSmallImg img{
+    height: 15vh;
+    width: 15vh;
+    object-fit: cover;
+
+}
+
+.ContainerMainArticle img{
+    height: 80vh;
+}
+
+img{
+    border-radius: 20px;
+}
+
+.TextMainArticle h1{
+    font-size: 3rem;
+    margin: 0;
+}
+
+.TextMainArticle article{
+    font-size: 1.5rem;
+    margin-bottom: 3vh;
+
+}
+
+.TextMainArticle a{
+    color: var(--third-color);
+    background-color: var(--first-color);
+    padding: 2% 5%;
+    border-radius: 20px;
+}
+
+
