--- a/contact.css
+++ b/contact.css
@@ -111,6 +111,8 @@ h3, h1 {
     border-radius:20px;
 }
 
+/* Design form */
+
 input{
     width: 90%;
     margin-left: 4%;
@@ -177,4 +179,93 @@ button:hover{
     color: var(--third-color);
     border-radius: 20px;
     margin-top: 1%;
+}
+
+/* Footer */
+
+footer {
+    color: var(--third-color);
+    height: 50vh;
+    width: 94%;
+    margin-left: 3%;
+    border-radius: 20px;
+    background-color: var(--first-color);
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5vh;
+}
+
+footer a {
+    color: var(--third-color);
+    font-family: var(--First-font);
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer a:not(.TitleCa) {
+    font-size: 20px;
+}
+
+.FooterSeparation {
+    height: 90%;
+    transform: translateY(5%);
+    width: 0.1%;
+    border: 1px solid var(--third-color);
+}
+
+/* Right Part */
+
+.FooterArticles {
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+}
+
+.FooterArticles div {
+    padding-right: 2%;
+}
+
+.FooterArticles div div {
+    margin-top: 5%;
+}
+
+.FooterArticles h2 {
+    margin-bottom: 20%;
+}
+
+.FooterContact {
+    display: grid;
+    text-align: center;
+    align-content: center;
+}
+
+
+@media (max-width:768px) {
+    .FooterArticles{
+        flex-direction: column;
+    }
+
+    footer {
+        height: 100vh;
+    }
+    .ContainerImgC{
+        display: block;
+    }
+
+    .ContainerImgC div:nth-child(2){
+        display: none;
+    }
+    .ContainerImgC img{
+        display: none;
+    }
+}
+
+@media (max-width: 1130px) {
+
+    footer {
+        flex-direction: column;
+        height: auto;
+    }
 }
