Bag all done, I need to add links on top of the first/second bag

--- a/chaussures.css
+++ b/chaussures.css
@@ -136,11 +136,17 @@ h3, h1 {
     justify-content: space-around;
 }
 
-.FlexInfoActicle a {
+.FlexInfoActicle a, h4 {
     padding: 25%;
     border-radius: 20px;
     color: var(--first-color);
     background-color: var(--third-color);
+}
+
+h4{
+    padding: 15%;
+    width: 100%;
+    transform: translateX(-20%);
 }
 
 .FlexInfoActicle p {
