--- a/shorts.css
+++ b/shorts.css
@@ -88,6 +88,8 @@ h3, h1 {
     color: var(--third-color);
 }
 
+
+
 .SecondNav{
     height: 6vh;
     background-color: var(--first-color);
@@ -136,11 +138,17 @@ h3, h1 {
     justify-content: space-around;
 }
 
-.FlexInfoActicle a {
+.FlexInfoActicle a, h4 {
     padding: 25%;
     border-radius: 20px;
     color: var(--first-color);
     background-color: var(--third-color);
+}
+
+h4{
+    padding: 15%;
+    width: 100%;
+    transform: translateX(-20%);
 }
 
 .FlexInfoActicle p {
