--- a/Articles/article1/article1.css
+++ b/Articles/article1/article1.css
@@ -201,7 +201,7 @@ footer a:not(.TitleCa) {
     margin-bottom: 20%;
 }
 
-.FooterContact {
+.FooterSupport {
     display: grid;
     text-align: center;
     align-content: center;
