--- a/Articles/article4/article4.css
+++ b/Articles/article4/article4.css
@@ -199,7 +199,7 @@ footer a:not(.TitleCa) {
     margin-bottom: 20%;
 }
 
-.FooterContact {
+.FooterSupport {
     display: grid;
     text-align: center;
     align-content: center;
