--- a/Shorts/shorts.css
+++ b/Shorts/shorts.css
@@ -245,7 +245,7 @@ footer a:not(.TitleCa) {
     margin-bottom: 20%;
 }
 
-.FooterContact {
+.FooterSupport {
     display: grid;
     text-align: center;
     align-content: center;
