--- a/chaussures/chaussures.css
+++ b/chaussures/chaussures.css
@@ -243,7 +243,7 @@ footer a:not(.TitleCa) {
     margin-bottom: 20%;
 }
 
-.FooterContact {
+.FooterSupport {
     display: grid;
     text-align: center;
     align-content: center;
