--- a/contact/contact.css
+++ b/contact/contact.css
@@ -89,7 +89,7 @@ h3, h1 {
 
 /* section */
 
-.ContainerContact{
+.ContainerSupport{
     height: 90vh;
     width: 90vw;
     background-color: var(--first-color);
@@ -235,7 +235,7 @@ footer a:not(.TitleCa) {
     margin-bottom: 20%;
 }
 
-.FooterContact {
+.FooterSupport {
     display: grid;
     text-align: center;
     align-content: center;
