--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ footer a:not(.TitleCa) {
   margin-bottom: 20%;
 }
 
-.FooterContact {
+.FooterSupport {
   display: grid;
   text-align: center;
   align-content: center;
